postcss/testData/inspections/nesting/ruleInsideDocument.pcss
@document domain(jetbrains.com), regexp("https:.*") {
  div {
    color: white;
  }

  <error descr="Top level ruleset selector should not contain '&'">&</error> div {
    color: red;
  }

  <error descr="Top level ruleset selector should not contain '@nest'">@nest</error> div <error descr="Top level ruleset selector should not contain '&'">&</error> {
      color: red;
  }
}

h1 {
  @document url(http://www.w3.org/) {
    div {
      color: white;
    }

    <error descr="Top level ruleset selector should not contain '&'">&</error> div {
      color: red;
    }

    <error descr="Top level ruleset selector should not contain '@nest'">@nest</error> div <error descr="Top level ruleset selector should not contain '&'">&</error> {
        color: red;
    }
  }
}